AC_INIT(sources/tilematch-linux.cpp)

PACKAGE=heriswap
PACKAGE_NAME=heriswap
VERSION=0.1.0

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

GLFW_REQUIRED_VERSION=2.7
PKG_CHECK_MODULES(GLFW, libglfw >= $GLFW_REQUIRED_VERSION)
AC_SUBST(GLFW_CFLAGS)
AC_SUBST(GLFW_LIBS)

PNG_REQUIRED_VERSION=1.2
PKG_CHECK_MODULES(LIBPNG, libpng >= PNG_REQUIRED_VERSION)
AC_SUBST(LIBPNG_CFLAGS)
AC_SUBST(LIBPNG_LIBS)

VORBIS_REQUIRED_VERSION=1.3.2
PKG_CHECK_MODULES(VORBIS, vorbis >= VORBIS_REQUIRED_VERSION)
AC_SUBST(VORBIS_CFLAGS)
AC_SUBST(VORBIS_LIBS)

PKG_CHECK_MODULES(VORBISFILE, vorbisfile >= VORBIS_REQUIRED_VERSION)
AC_SUBST(VORBISFILE_CFLAGS)
AC_SUBST(VORBISFILE_LIBS)

SQLITE_REQUIRED_VERSION=3.7
PKG_CHECK_MODULES(SQLITE, sqlite3 >= SQLITE_REQUIRED_VERSION)
AC_SUBST(SQLITE_CFLAGS)
AC_SUBST(SQLITE_LIBS)

GLEW_REQUIRED_VERSION=1.6.0
PKG_CHECK_MODULES(GLEW, glew >= GLEW_REQUIRED_VERSION)
AC_SUBST(GLEW_CFLAGS)
AC_SUBST(GLEW_LIBS)

OPENAL_REQUIRED_VERSION=1.14
PKG_CHECK_MODULES(OPENAL, openal >= OPENAL_REQUIRED_VERSION)
AC_SUBST(OPENAL_CFLAGS)
AC_SUBST(OPENAL_LIBS)

AC_PROG_CXX
AC_PROG_RANLIB

AC_OUTPUT(Makefile sources/Makefile sac/Makefile assets/Makefile)
