imagedir=$(datadir)/@PACKAGE@/
image_DATA=alphabet_alpha.png \
	alphabet.desc \
	decor1_alpha.png \
	decor1.png \
	decor1.desc \
	decor2_alpha.png \
	decor2.png \
	decor2.desc \
	feuilles_alpha.png \
	feuilles.png \
	feuilles.desc \
	help.png \
	help.desc \
	logo_alpha.png \
	logo.png \
	logo.desc \
	menu_alpha.png \
	menu.png \
	menu.desc \
	nuages_alpha.png \
	nuages.png \
	nuages.desc \
	snow_alpha.png \
	snow.png \
	snow.desc \
	sprites_alpha.png \
	sprites.png \
	sprites.desc \
	typo.desc \
	gdtypo.desc \
	default.fs \
	desaturate.fs \
	default.vs

audiodir=$(datadir)/@PACKAGE@/audio
audio_DATA=audio/A.ogg \
	audio/B.ogg \
	audio/C.ogg \
	audio/D.ogg \
	audio/E.ogg \
	audio/F.ogg \
	audio/G.ogg \
	audio/H.ogg \
	audio/I.ogg \
	audio/level_up.ogg \
	audio/musique_menu.ogg \
	audio/son_descend.ogg \
	audio/son_monte.ogg \
	audio/son_menu.ogg

EXTRA_DIST = $(image_DATA) $(audio_DATA)
